GRAMMAR
Grammar Definition
==================

Terminals are enclosed in ``. Whitespaces are ignored.

Starting symbol:

    PROGRAM    ::= ( FN_DECL | FN_IMPL | STMT )*

Literal:

    NUM        ::= [0-9]
    INTEGER    ::= NUM
    FLOATING   ::= NUM.NUM
    BOOLEAN    ::= `true` | `false`
    STRING     ::= `"` ASCII* `"`
    IDENT      ::= [a-zA-Z][a-zA-Z0-9]*
    LITERAL    ::= INTEGER | FLOATING | BOOLEAN | STRING

Expression:

    EXPR       ::= COMPARISON_EXPR ( `=` EXPR )?

Note that the assignment is just an expression that might have an `=`
at the end. This is a cool trick that C uses to keep the grammar LL(1)
which makes it easier for parsing.

    COMPARISON_OP   ::= ( `==` | `!=` | `<` | `>` | `<=` | `>=` )
    COMPARISON_EXPR ::= ARITH_EXPR ( COMPARISON_OP ARITH_EXPR )*

Math ops:

    ARITH_EXPR   ::= TERM ( (`+` | `-` ) TERM )*
    TERM         ::= FACTOR ( (`*` | `/`) FACTOR )*
    FACTOR       ::= LITERAL | IDENT ( `(` ARGS `)` )? | `(` EXPR `)`

Note that these math operations are simply the non-left-recursive
version of the following grammar, which respects operator
precedence:

          ARITH_EXPR   ::= ARITH_EXPR `+` TERM
                         | ARITH_EXPR `-` TERM
          TERM         ::= TERM `*` FACTOR
                           TERM `/` FACTOR

Statements:

    STMT       ::= IF_STMT | WHILE_STMT | FOR_STMT| BLOCK | EXPR `;`
    BLOCK      ::= `{` STMT* `}`

Control flow statements:

    IF_STMT    ::= `if` `(` EXPR `)` BLOCK ( `else` BLOCK )?

The `else` part of an if statement is optional, and the parser will
always match the closest if. This avoids ambiguity:

    FOR_STMT   ::= `for` `(` ASSIGNMENT `;` EXPR `;` EXPR `)` BLOCK
    WHILE_STMT ::= `while` `(` EXPR `)` BLOCK

Functions:

    ARGS       ::= ( EXPR `,` )*
    FN_DECL    ::= fn IDENT ( ( IDENT , )* )
    FN_IMPL    ::= fn IDENT ( ( IDENT , )* ) BLOCK
